# vllm-adapter

./: README.md  README.ru.md  pyproject.toml
src/vllm_adapter/: __init__.py  adapter.py
tests/: test_vllm_adapter.py
